7-ingress-np/networkpolicy_allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy-allow
spec:
  policyTypes:
    - "Ingress"
  podSelector:
    matchLabels:
      app: dest
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: orig
