7-ingress-np/networkpolicy_deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
spec:
  podSelector:
    matchLabels:
      app: dest
  policyTypes:
    - "Ingress"
